Adjust State- and InventoryEntrySyncer and enable unittests