@@ -5,16 +5,21 @@ import static com.commercetools.project.sync.util.TestUtils.mockResourceIdsGraph
 import static com.commercetools.project.sync.util.TestUtils.readObjectFromResource;
 import static java.lang.String.format;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import com.commercetools.api.client.ByProjectKeyGraphqlPost;
+import com.commercetools.api.client.ByProjectKeyGraphqlRequestBuilder;
 import com.commercetools.api.client.ByProjectKeyStatesGet;
 import com.commercetools.api.client.ProjectApiRoot;
 import com.commercetools.api.defaultconfig.ApiRootBuilder;
 import com.commercetools.api.models.common.LocalizedString;
+import com.commercetools.api.models.graph_ql.GraphQLRequest;
+import com.commercetools.api.models.graph_ql.GraphQLResponse;
 import com.commercetools.api.models.state.State;
 import com.commercetools.api.models.state.StateDraft;
 import com.commercetools.api.models.state.StateDraftBuilder;
@@ -24,12 +29,11 @@ import com.commercetools.api.models.state.StateResourceIdentifierBuilder;
 import com.commercetools.api.models.state.StateTypeEnum;
 import com.commercetools.sync.states.StateSync;
 import io.vrap.rmf.base.client.ApiHttpResponse;
-import java.util.Collections;
+import io.vrap.rmf.base.client.utils.json.JsonUtils;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import uk.org.lidalia.slf4jtest.LoggingEvent;
 import uk.org.lidalia.slf4jtest.TestLogger;
@@ -108,7 +112,7 @@ class StateSyncerTest {
   }
 
   @Test
-  void transform_WhenNoKeyIsProvided_ShouldContinueAndLogError() {
+  void transform_WhenNoKeyIsProvided_ShouldContinueWithEmptyStateDraft() {
     // preparation
     final ProjectApiRoot sourceClient = mock(ProjectApiRoot.class);
     final List<State> stateTypePage =
@@ -121,28 +125,13 @@ class StateSyncerTest {
         stateSyncer.transform(stateTypePage).toCompletableFuture();
 
     // assertion
-    assertThat(stateDrafts).isCompletedWithValue(Collections.emptyList());
-    assertThat(syncerTestLogger.getAllLoggingEvents())
-        .anySatisfy(
-            loggingEvent -> {
-              assertThat(loggingEvent.getMessage()).contains("StateDraft: key is missing");
-              assertThat(loggingEvent.getThrowable().isPresent()).isTrue();
-              assertThat(loggingEvent.getThrowable().get())
-                  .isInstanceOf(NullPointerException.class);
-            });
+    assertThat(stateDrafts).isCompletedWithValue(List.of(StateDraft.of()));
   }
 
-  /*
-   * Disabled as long as there's NPE when a key is null or empty and therefore add with PLACEHOLDER to cache.
-   * See: https://commercetools.atlassian.net/browse/DEVX-277
-   */
-  @Disabled
   @Test
   void syncWithError_WhenTransistionReferencesAreInvalid_ShouldCallErrorCallback() {
     // preparation
     final ProjectApiRoot sourceClient = mock(ProjectApiRoot.class);
-    mockResourceIdsGraphQlRequest(
-        sourceClient, "states", "ab949f1b-c441-4c70-9cf0-4182c36d6a6c", "");
     final List<State> stateTypePage = List.of(readObjectFromResource("state-2.json", State.class));
     final StatePagedQueryResponse queryResponse =
         StatePagedQueryResponseBuilder.of()
@@ -162,6 +151,19 @@ class StateSyncerTest {
     when(sourceClient.states()).thenReturn(mock());
     when(sourceClient.states().get()).thenReturn(byProjectKeyStatesGet);
 
+    final String jsonResponseString = "{\"data\":{\"states\":{\"results\":[]}}}";
+    final GraphQLResponse result =
+        JsonUtils.fromJsonString(jsonResponseString, GraphQLResponse.class);
+    final ApiHttpResponse graphQlResponse = mock(ApiHttpResponse.class);
+    when(graphQlResponse.getBody()).thenReturn(result);
+    final ByProjectKeyGraphqlRequestBuilder byProjectKeyGraphqlRequestBuilder = mock();
+    when(sourceClient.graphql()).thenReturn(byProjectKeyGraphqlRequestBuilder);
+    final ByProjectKeyGraphqlPost byProjectKeyGraphqlPost = mock();
+    when(byProjectKeyGraphqlRequestBuilder.post(any(GraphQLRequest.class)))
+        .thenReturn(byProjectKeyGraphqlPost);
+    when(byProjectKeyGraphqlPost.execute())
+        .thenReturn(CompletableFuture.completedFuture(graphQlResponse));
+
     // test
     final StateSyncer stateSyncer =
         StateSyncer.of(sourceClient, mock(ProjectApiRoot.class), getMockedClock());
@@ -175,7 +177,7 @@ class StateSyncerTest {
     assertThat(errorLog.getThrowable().get().getMessage())
         .isEqualTo(
             format(
-                "StateDraft with key: %s has invalid state transitions",
+                "StateDraft with key: '%s' has invalid state transitions",
                 stateTypePage.get(0).getKey()));
   }
 }
